# Model2SAS

./: .gitignore  Functions.py  MainWindow.py  MainWindowFunction.py  MathDescription.py  MathModelGenerationWindow.py  Model2SAS.py  Model2SAS_UI.py  Model2SAS_exe.py  Model2SAS_multip.py  Model2SAS_panel.py  Model2SAS_single-process.py  ModelModifyWindow.py  ModelSection.py  Plot.py  README.md  calc_func.py  calc_func_new.py  calcfunc.py  default_params.json  detector.py  math_model_template.py  mathmodel_template.py  mathpart_template.py  model.py  model2sas.py  model_new.py  plot.py  plot_new.py  pyproject.toml  sas.py  sas_calc.py  sas_new.py  shell_pointcloud_numpy.txt  std.py  test_SphHarmMethod.py  utility.py  utility_new.py  utils.py
model2sas/: __init__.py  calcfunc.py  model.py  plot.py  utils.py
model2sas/gui/: MainWindow.ui  MainWindow_ui.py  SubWindow_buildmath.ui  main.py  utils.py
model2sas/qtgui/: MainWindow_ui.py  ModelModifyWindow.ui
models/: mathmodel_template.py  mathpart_template.py  std.py
qtgui/: MainWindow.ui  MainWindow_ui.py  MathModelGenerationWindow.ui  MathModelGenerationWindow_ui.py  controlPanel.ui  controlPanel_ui.py  mainwindow.ui  mainwindow_ui.py  mathmodelView.ui  mathmodelView_ui.py  modelModifyWindow.ui  modelModifyWindow_ui.py  newProject.ui  newProject_ui.py  plotView.ui  plotView_ui.py  pointsWithSldView.ui  pointsWithSldView_ui.py  pyuic5.bat  sasdataView.ui  sasdataView_ui.py  stlmodelView.ui  stlmodelView_ui.py
resources/models/: 1fx8.abs  (+14 more)
tests/: test_gui.py  test_usage.py
ui_file/: Model2SAS_UI.py  Model2SAS_UI.ui
(+25 files in other folders)
